<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mylist"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_Collegamenti"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_collegamenti" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit"
            android:paddingTop="190dp"/>
    </group>
</menu>