<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cm.View.Fragment.Homepage.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mylist"
        android:name="com.example.cm.View.Fragment.LeMieListe.LeMieListeFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_lemieliste" />

    <fragment
        android:id="@+id/nav_Collegamenti"
        android:name="com.example.cm.View.Fragment.Collegamenti.CollegamentiFragment"
        android:label="@string/menu_collegamenti"
        tools:layout="@layout/fragment_collegamenti" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.cm.ui.AboutUs.AboutUsFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/about_us_fragment" />

</navigation>